初始化个人主页仓库

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>小靓绅士社区</title>
 </head>
 <body>
-请访问<a href="https://xiaoliang18.vip">小靓绅士社区</a>
+请访问<a href="https://www.xiaoliang18.vip">小靓绅士社区</a>
 </body>
 </html>
