--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>小靓绅士社区</title>
 </head>
 <body>
-<p>请访问<a href="https://www.xiaoliang18.vip">小靓绅士社区</a></p>
-<p>社区QQ群：<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=80403f0dbc3ded2a5841b7403a60bfde420411cc8f0f83047c0c5ecfbfcb15d0">610021695</a></p>
+<p style="font-size:32px;">请访问<a target="_blank" href="https://www.xiaoliang18.com">小靓绅士社区</a></p>
+<p style="font-size:32px;">社区QQ群：<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=80403f0dbc3ded2a5841b7403a60bfde420411cc8f0f83047c0c5ecfbfcb15d0">610021695</a></p>
 </body>
 </html>
