初始化个人主页仓库

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="sogou_site_verification" content="C4NCv6kECo"/>
 	<meta name="viewport" content="width=device-width,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <title>小靓绅士社区</title>
