--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <meta name="baidu-site-verification" content="EQ6sTcU8Nm" />
 	<meta name="sogou_site_verification" content="C4NCv6kECo"/>
 	<meta name="viewport" content="width=device-width,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
