--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>小靓绅士社区</title>
 </head>
 <body>
-<p style="font-size:20px;">请访问：<a target="_blank" href="http://www.xiaoliang18.com">小靓绅士社区</a></p>
+<p style="font-size:20px;">请访问：<a target="_blank" href="http://www.xiaoliang18.cc">小靓绅士社区</a></p>
 <p style="font-size:20px;">社区QQ群：<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=80403f0dbc3ded2a5841b7403a60bfde420411cc8f0f83047c0c5ecfbfcb15d0">610021695</a></p>
 </body>
 </html>
